# VideoRating

./: CMakeLists.txt
src/: README.md  datos.cpp  datos.h  episodio.cpp  episodio.h  main.cpp  menu.cpp  menu.h  movies.csv  pelicula.cpp  pelicula.h  series.csv  video.cpp  video.h
